feat: add ui button for ready

--- a/src/MakaMek.Avalonia/MakaMek.Avalonia/Views/StartNewGame/Fragments/PlayersFragment.axaml
+++ b/src/MakaMek.Avalonia/MakaMek.Avalonia/Views/StartNewGame/Fragments/PlayersFragment.axaml
@@ -35,7 +35,10 @@
                                                                             IsEnabled="{Binding CanAddUnit}"/>
                                     <Button Content="Join Game" Command="{Binding JoinGameCommand}" 
                                             Classes="primary"
-                                            IsEnabled="{Binding CanJoin}"/>
+                                            IsVisible="{Binding CanJoin}"/>
+                                    <Button Content="Set Ready" Command="{Binding SetReadyCommand}" 
+                                            Classes="primary"
+                                            IsVisible="{Binding CanSetReady}"/>
                                 </StackPanel>
                                 
                             </StackPanel>
