chore: add caption to join view

--- a/src/MakaMek.Avalonia/MakaMek.Avalonia/Views/JoinGame/Fragments/ConnectFragment.axaml
+++ b/src/MakaMek.Avalonia/MakaMek.Avalonia/Views/JoinGame/Fragments/ConnectFragment.axaml
@@ -10,7 +10,7 @@
   <StackPanel Spacing="10">
     <TextBlock Text="Server Address:" FontWeight="Bold"/>
     <TextBox Text="{Binding ServerAddress, Mode=TwoWay}"
-             Watermark="Enter Server IP or Hostname"/>
+             Watermark="Enter Server IP"/>
     <Button Content="Connect"
             Command="{Binding ConnectCommand}"
             IsEnabled="{Binding CanConnect}" 
