--- a/src/MakaMek.Avalonia/MakaMek.Avalonia/Views/StartNewGame/StartNewGameViewNarrow.axaml
+++ b/src/MakaMek.Avalonia/MakaMek.Avalonia/Views/StartNewGame/StartNewGameViewNarrow.axaml
@@ -16,7 +16,7 @@
                 HorizontalAlignment="Center"
                 Margin="0,10,0,0"/>
         
-        <TextBlock Text="New Game" 
+        <TextBlock Text="Start New Game" 
                    Classes="h1" 
                    HorizontalAlignment="Center"
                    DockPanel.Dock="Top"
