--- a/src/MakaMek.Avalonia/MakaMek.Avalonia/Views/StartNewGame/Fragments/PlayersFragment.axaml
+++ b/src/MakaMek.Avalonia/MakaMek.Avalonia/Views/StartNewGame/Fragments/PlayersFragment.axaml
@@ -5,7 +5,7 @@
              xmlns:viewModels="clr-namespace:Sanet.MakaMek.Core.ViewModels;assembly=Sanet.MakaMek.Core"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
              x:Class="Sanet.MakaMek.Avalonia.Views.NewGame.Fragments.PlayersFragment"
-             x:DataType="viewModels:StartNewGameViewModel">
+             x:DataType="viewModels:NewGameViewModel">
     <StackPanel Classes="verticalSpaced">
         <TextBlock Text="Players" Classes="h2" HorizontalAlignment="Center"/>
         <Button Content="Add Player" Command="{Binding AddPlayerCommand}"
