wip: do not calculate to hit number for disabled weapons

--- a/src/MakaMek.Avalonia/MakaMek.Avalonia/Views/BattleMapView.axaml
+++ b/src/MakaMek.Avalonia/MakaMek.Avalonia/Views/BattleMapView.axaml
@@ -159,6 +159,7 @@
                         <ItemsControl.ItemTemplate>
                             <DataTemplate x:DataType="wrappers:WeaponSelectionViewModel">
                                 <Grid ColumnDefinitions="Auto,*,Auto,Auto"
+                                      Background="{Binding Weapon, Converter={StaticResource WeaponStatusBackgroundConverter}}"
                                       RowDefinitions="*,*,*">
                                     <CheckBox 
                                         Grid.Row="0"
