--- a/src/MakaMek.Avalonia/MakaMek.Avalonia/App.axaml
+++ b/src/MakaMek.Avalonia/MakaMek.Avalonia/App.axaml
@@ -2,12 +2,14 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              x:Class="Sanet.MakaMek.Avalonia.App"
              xmlns:di="using:Microsoft.Extensions.DependencyInjection"
+             xmlns:converters="clr-namespace:Sanet.MakaMek.Avalonia.Converters"
              RequestedThemeVariant="Light">
 
     <Application.Resources>
         <ResourceDictionary>
             <di:ServiceCollection x:Key="ServiceCollection"/>
             <FontFamily x:Key="AwesomeFontSolid">avares://Sanet.MakaMek.Avalonia/Assets/Fonts/#Font Awesome 6 Free Solid</FontFamily>
+            <converters:WeaponStatusBackgroundConverter x:Key="WeaponStatusBackgroundConverter"/>
             <ResourceDictionary.MergedDictionaries>
                 <ResourceInclude Source="avares://Sanet.MakaMek.Avalonia/Styles/Colors.axaml"/>
             </ResourceDictionary.MergedDictionaries>
