feat: group wepons by location

--- a/src/MakaMek.Avalonia/MakaMek.Avalonia/Controls/UnitWeaponsPanel.axaml
+++ b/src/MakaMek.Avalonia/MakaMek.Avalonia/Controls/UnitWeaponsPanel.axaml
@@ -4,6 +4,7 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:weapons="clr-namespace:Sanet.MakaMek.Core.Models.Units.Components.Weapons;assembly=Sanet.MakaMek.Core"
              xmlns:converters="clr-namespace:Sanet.MakaMek.Avalonia.Converters"
+             xmlns:controls="clr-namespace:Sanet.MakaMek.Avalonia.Controls"
              mc:Ignorable="d" d:DesignWidth="300" d:DesignHeight="300"
              x:Class="Sanet.MakaMek.Avalonia.Controls.UnitWeaponsPanel">
     <UserControl.Resources>
@@ -19,21 +20,30 @@
                 <TextBlock Grid.Column="3" Text="Range" Classes="h3" Margin="5,0"/>
             </Grid>
             
-            <ItemsControl Name="WeaponsList">
+            <ItemsControl Name="WeaponsGroup">
                 <ItemsControl.ItemTemplate>
-                    <DataTemplate DataType="weapons:Weapon">
-                        <Border Classes="listItem" Margin="2">
-                            <Grid ColumnDefinitions="4*,2*,*,3*" Margin="5,2" Background="{Binding ., Converter={StaticResource WeaponStatusBackgroundConverter}}">
-                                <TextBlock Grid.Column="0" Text="{Binding Name}" Classes="body" VerticalAlignment="Center"/>
-                                <TextBlock Grid.Column="1" Text="{Binding Damage}" Classes="body" Margin="5,0" VerticalAlignment="Center"/>
-                                <TextBlock Grid.Column="2" Text="{Binding Heat}" Classes="body" Margin="5,0" VerticalAlignment="Center"/>
-                                <TextBlock Grid.Column="3" 
-                                        Text="{Binding ., Converter={StaticResource WeaponRangeConverter}}" 
-                                        Classes="body"
-                                        Margin="5,0" 
-                                        VerticalAlignment="Center"/>
-                            </Grid>
-                        </Border>
+                    <DataTemplate DataType="controls:WeaponGroup">
+                        <StackPanel>
+                            <TextBlock Text="{Binding MountedOn}" Classes="h4"/>
+                            <ItemsControl Name="WeaponsList" ItemsSource="{Binding Weapons}">
+                                <ItemsControl.ItemTemplate>
+                                    <DataTemplate DataType="weapons:Weapon">
+                                        <Border Margin="2">
+                                            <Grid ColumnDefinitions="4*,2*,*,3*" Margin="5,2" Background="{Binding ., Converter={StaticResource WeaponStatusBackgroundConverter}}">
+                                                <TextBlock Grid.Column="0" Text="{Binding Name}" Classes="body" VerticalAlignment="Center"/>
+                                                <TextBlock Grid.Column="1" Text="{Binding Damage}" Classes="body" Margin="5,0" VerticalAlignment="Center"/>
+                                                <TextBlock Grid.Column="2" Text="{Binding Heat}" Classes="body" Margin="5,0" VerticalAlignment="Center"/>
+                                                <TextBlock Grid.Column="3" 
+                                                        Text="{Binding ., Converter={StaticResource WeaponRangeConverter}}" 
+                                                        Classes="body"
+                                                        Margin="5,0" 
+                                                        VerticalAlignment="Center"/>
+                                            </Grid>
+                                        </Border>
+                                    </DataTemplate>
+                                    </ItemsControl.ItemTemplate>
+                                </ItemsControl>
+                        </StackPanel>
                     </DataTemplate>
                 </ItemsControl.ItemTemplate>
             </ItemsControl>
